<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MDL Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up / Forgot Password</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    
</resources>
