<android.support.design.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        
    </android.support.design.widget.AppBarLayout>

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="0dp">
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="0dp">
	    
		    <android.support.v7.widget.CardView
		        android:id="@+id/card"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="?attr/actionBarSize"
		        android:layout_gravity="center"
		        android:duplicateParentState="true"
		        android:foreground="@drawable/card_view_selector"
		        app:cardBackgroundColor="@color/app_color"
		        app:cardCornerRadius="4dp"
		        app:cardElevation="4dp"
		        app:cardPreventCornerOverlap="true"
		        app:cardUseCompatPadding="true"
		        android:visibility="visible">
		        
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="?attr/actionBarSize"
			        android:layout_marginBottom="?attr/actionBarSize"
			        android:orientation="vertical"
			        android:layout_centerHorizontal="true"
		    		android:layout_centerVertical="true"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:paddingTop="0dp">
			
			        <android.support.design.widget.TextInputLayout
			            android:id="@+id/input_username_layout"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textColorHint="@android:color/white">
			
			            <EditText
			                android:id="@+id/input_username"
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:singleLine="true"
			                android:hint="@string/hint_name"
			                android:textColorHint="@android:color/white" />
			        </android.support.design.widget.TextInputLayout>
			
			        <android.support.design.widget.TextInputLayout
			            android:id="@+id/input_email_layout"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textColorHint="@android:color/white">
			
			            <EditText
			                android:id="@+id/input_email"
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:inputType="textEmailAddress"
			                android:hint="@string/hint_email"
			                android:textColorHint="@android:color/white" />
			        </android.support.design.widget.TextInputLayout>
			
			        <android.support.design.widget.TextInputLayout
			            android:id="@+id/input_password_layout"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:textColorHint="@android:color/white">
			
			            <EditText
			                android:id="@+id/input_password"
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:inputType="textPassword"
			                android:hint="@string/hint_password"
			                android:textColorHint="@android:color/white" />
			        </android.support.design.widget.TextInputLayout>
			
			        <Button 
			            android:theme="@style/SpecialButton"
			            android:id="@+id/btn_signup"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/btn_sign_in"
			            android:background="@color/colorPrimary"
			            android:layout_marginTop="40dp"
			            android:textColor="@android:color/white"/>
			
			    </LinearLayout>
		    </android.support.v7.widget.CardView>
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:paddingTop="10dp"
		        android:paddingBottom="20dp">
		    
		       	<TextView 
		       	    android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_gravity="center"
		        	android:text="@string/btn_sign_up"
		        	android:textColor="@color/app_color"/>
		     </LinearLayout>
	    </LinearLayout>
    </ScrollView>
    
</android.support.design.widget.CoordinatorLayout>